--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,7 +6,8 @@
   },
   "tasks": {
     "dev": "deno run --watch main.ts",
-    "main": "deno run --allow-net --allow-run --allow-read --allow-write main.ts"
+    "main": "deno run --allow-net --allow-run --allow-read --allow-write --unstable main.ts",
+    "consumer": "deno run --allow-net --allow-read --allow-write --unstable consumer.ts"
   },
   "lock": "./deno.lock"
 }
